// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-copy.vue Demo-toast 1`] = `
<div>
  <div class="root">
    <div vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        复制
      </a>
    </div>
    <transition-stub name="fade-fast">
      <div arraw-size="normal" class="root" style="display: none;">
        <div class="arrow" data-popper-arrow></div>
        <div class="body" size="normal">
          无复制对象
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`u-copy.vue Demo-toast 2`] = `
<div>
  <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    复制
  </a>
</div>
`;

exports[`u-copy.vue Demo-toast 提示 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div class="root">
      <div vusion-slot-name="default">
        <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
          500毫秒
        </a>
      </div>
      <transition-stub name="fade-fast">
        <div arraw-size="normal" class="root" style="display: none;">
          <div class="arrow" data-popper-arrow></div>
          <div class="body" size="normal">
            无复制对象
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root">
      <div vusion-slot-name="default">
        <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
          2秒
        </a>
      </div>
      <transition-stub name="fade-fast">
        <div arraw-size="normal" class="root" style="display: none;">
          <div class="arrow" data-popper-arrow></div>
          <div class="body" size="normal">
            无复制对象
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root">
      <div vusion-slot-name="default">
        <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
          4秒
        </a>
      </div>
      <transition-stub name="fade-fast">
        <div arraw-size="normal" class="root" style="display: none;">
          <div class="arrow" data-popper-arrow></div>
          <div class="body" size="normal">
            无复制对象
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`u-copy.vue Demo-tooltip (默认) 1`] = `
<div>
  <div class="root">
    <div vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        复制
      </a>
    </div>
    <transition-stub name="fade-fast">
      <div arraw-size="normal" class="root" style="display: none;">
        <div class="arrow" data-popper-arrow></div>
        <div class="body" size="normal">
          已复制
        </div>
      </div>
    </transition-stub>
    <transition-stub name="fade-fast">
      <div arraw-size="normal" class="root" style="display: none;">
        <div class="arrow" data-popper-arrow></div>
        <div class="body" size="normal">
          无复制对象
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`u-copy.vue Demo-tooltip 弹框 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div class="root">
      <div vusion-slot-name="default">
        <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
          500毫秒
        </a>
      </div>
      <transition-stub name="fade-fast">
        <div arraw-size="normal" class="root" style="display: none;">
          <div class="arrow" data-popper-arrow></div>
          <div class="body" size="normal">
            已复制
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade-fast">
        <div arraw-size="normal" class="root" style="display: none;">
          <div class="arrow" data-popper-arrow></div>
          <div class="body" size="normal">
            无复制对象
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root">
      <div vusion-slot-name="default">
        <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
          2秒
        </a>
      </div>
      <transition-stub name="fade-fast">
        <div arraw-size="normal" class="root" style="display: none;">
          <div class="arrow" data-popper-arrow></div>
          <div class="body" size="normal">
            已复制
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade-fast">
        <div arraw-size="normal" class="root" style="display: none;">
          <div class="arrow" data-popper-arrow></div>
          <div class="body" size="normal">
            无复制对象
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root">
      <div vusion-slot-name="default">
        <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
          4秒
        </a>
      </div>
      <transition-stub name="fade-fast">
        <div arraw-size="normal" class="root" style="display: none;">
          <div class="arrow" data-popper-arrow></div>
          <div class="body" size="normal">
            已复制
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade-fast">
        <div arraw-size="normal" class="root" style="display: none;">
          <div class="arrow" data-popper-arrow></div>
          <div class="body" size="normal">
            无复制对象
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`u-copy.vue Demo-不提示 1`] = `
<div>
  <div class="root">
    <div vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        复制
      </a>
    </div>
    <transition-stub name="fade-fast">
      <div arraw-size="normal" class="root" style="display: none;">
        <div class="arrow" data-popper-arrow></div>
        <div class="body" size="normal">
          无复制对象
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`u-copy.vue Demo-基本用法 1`] = `
<div>
  <div class="root">
    <div vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        复制
      </a>
    </div>
    <transition-stub name="fade-fast">
      <div arraw-size="normal" class="root" style="display: none;">
        <div class="arrow" data-popper-arrow></div>
        <div class="body" size="normal">
          已复制
        </div>
      </div>
    </transition-stub>
    <transition-stub name="fade-fast">
      <div arraw-size="normal" class="root" style="display: none;">
        <div class="arrow" data-popper-arrow></div>
        <div class="body" size="normal">
          无复制对象
        </div>
      </div>
    </transition-stub>
  </div>&nbsp;
  <div class="root">
    <div vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        复制密钥
      </a>
    </div>
    <transition-stub name="fade-fast">
      <div arraw-size="normal" class="root" style="display: none;">
        <div class="arrow" data-popper-arrow></div>
        <div class="body" size="normal">
          已复制
        </div>
      </div>
    </transition-stub>
    <transition-stub name="fade-fast">
      <div arraw-size="normal" class="root" style="display: none;">
        <div class="arrow" data-popper-arrow></div>
        <div class="body" size="normal">
          无复制对象
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`u-copy.vue Demo-复制链接 1`] = `
<div>
  <div class="root">
    <div vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        复制
      </a>
    </div>
    <transition-stub name="fade-fast">
      <div arraw-size="normal" class="root" style="display: none;">
        <div class="arrow" data-popper-arrow></div>
        <div class="body" size="normal">
          已复制
        </div>
      </div>
    </transition-stub>
    <transition-stub name="fade-fast">
      <div arraw-size="normal" class="root" style="display: none;">
        <div class="arrow" data-popper-arrow></div>
        <div class="body" size="normal">
          无复制对象
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`u-copy.vue Demo-指令形式 1`] = `
<div>
  <div class="root" direction="vertical" style="min-width: 300px; max-width: 550px;" type vusion-slot-name="default">
    <div class="root" direction="horizontal" gap="small" justify="center" type vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        上左
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        上边
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        上右
      </a>
    </div>
    <div class="root" direction="vertical" justify="center" style="width: 150px; float: left;" type vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        左上
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        左边
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        左下
      </a>
    </div>
    <div class="root" direction="vertical" justify="center" style="width: 150px; float: right;" type vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        右上
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        右边
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        右下
      </a>
    </div>
    <div class="root" direction="horizontal" gap="small" justify="center" style="clear: both;" type vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        下左
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        下边
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        下右
      </a>
    </div>
  </div>
</div>
`;

exports[`u-copy.vue Demo-指令形式 2`] = `
<div>
  <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    复制
  </a>
</div>
`;

exports[`u-copy.vue Demo-指令形式 3`] = `
<div>
  <a class="root" disabled="disabled" hovertype="underline" tabindex="-1" target="_self" vusion-slot-name-edit="text">
    复制
  </a>
</div>
`;

exports[`u-copy.vue Demo-提示位置 1`] = `
<div>
  <div class="root" direction="vertical" style="min-width: 300px; max-width: 550px;" type vusion-slot-name="default">
    <div class="root" direction="horizontal" gap="small" justify="center" type vusion-slot-name="default">
      <div class="root">
        <div vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            上左
          </a>
        </div>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              已复制
            </div>
          </div>
        </transition-stub>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              无复制对象
            </div>
          </div>
        </transition-stub>
      </div>
      <div class="root">
        <div vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            上边
          </a>
        </div>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              已复制
            </div>
          </div>
        </transition-stub>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              无复制对象
            </div>
          </div>
        </transition-stub>
      </div>
      <div class="root">
        <div vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            上右
          </a>
        </div>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              已复制
            </div>
          </div>
        </transition-stub>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              无复制对象
            </div>
          </div>
        </transition-stub>
      </div>
    </div>
    <div class="root" direction="vertical" justify="center" style="width: 150px; float: left;" type vusion-slot-name="default">
      <div class="root">
        <div vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            左上
          </a>
        </div>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              已复制
            </div>
          </div>
        </transition-stub>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              无复制对象
            </div>
          </div>
        </transition-stub>
      </div>
      <div class="root">
        <div vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            左边
          </a>
        </div>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              已复制
            </div>
          </div>
        </transition-stub>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              无复制对象
            </div>
          </div>
        </transition-stub>
      </div>
      <div class="root">
        <div vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            左下
          </a>
        </div>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              已复制
            </div>
          </div>
        </transition-stub>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              无复制对象
            </div>
          </div>
        </transition-stub>
      </div>
    </div>
    <div class="root" direction="vertical" justify="center" style="width: 150px; float: right;" type vusion-slot-name="default">
      <div class="root">
        <div vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            右上
          </a>
        </div>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              已复制
            </div>
          </div>
        </transition-stub>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              无复制对象
            </div>
          </div>
        </transition-stub>
      </div>
      <div class="root">
        <div vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            右边
          </a>
        </div>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              已复制
            </div>
          </div>
        </transition-stub>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              无复制对象
            </div>
          </div>
        </transition-stub>
      </div>
      <div class="root">
        <div vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            右下
          </a>
        </div>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              已复制
            </div>
          </div>
        </transition-stub>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              无复制对象
            </div>
          </div>
        </transition-stub>
      </div>
    </div>
    <div class="root" direction="horizontal" gap="small" justify="center" style="clear: both;" type vusion-slot-name="default">
      <div class="root">
        <div vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            下左
          </a>
        </div>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              已复制
            </div>
          </div>
        </transition-stub>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              无复制对象
            </div>
          </div>
        </transition-stub>
      </div>
      <div class="root">
        <div vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            下边
          </a>
        </div>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              已复制
            </div>
          </div>
        </transition-stub>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              无复制对象
            </div>
          </div>
        </transition-stub>
      </div>
      <div class="root">
        <div vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            下右
          </a>
        </div>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              已复制
            </div>
          </div>
        </transition-stub>
        <transition-stub name="fade-fast">
          <div arraw-size="normal" class="root" style="display: none;">
            <div class="arrow" data-popper-arrow></div>
            <div class="body" size="normal">
              无复制对象
            </div>
          </div>
        </transition-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-copy.vue Demo-提示内容 1`] = `
<div>
  <div class="root">
    <div vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        复制
      </a>
    </div>
    <transition-stub name="fade-fast">
      <div arraw-size="normal" class="root" style="display: none;">
        <div class="arrow" data-popper-arrow></div>
        <div class="body" size="normal">
          当前项已复制成功
        </div>
      </div>
    </transition-stub>
    <transition-stub name="fade-fast">
      <div arraw-size="normal" class="root" style="display: none;">
        <div class="arrow" data-popper-arrow></div>
        <div class="body" size="normal">
          无复制对象
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`u-copy.vue Demo-禁用状态 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div class="root">
      <div vusion-slot-name="default">
        <a class="root" disabled="disabled" hovertype="underline" tabindex="-1" target="_self" vusion-slot-name-edit="text">
          复制
        </a>
      </div>
      <transition-stub name="fade-fast">
        <div arraw-size="normal" class="root" style="display: none;">
          <div class="arrow" data-popper-arrow></div>
          <div class="body" size="normal">
            已复制
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade-fast">
        <div arraw-size="normal" class="root" style="display: none;">
          <div class="arrow" data-popper-arrow></div>
          <div class="body" size="normal">
            无复制对象
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root">
      <div vusion-slot-name="default">
        <a class="root" disabled="disabled" hovertype="underline" tabindex="-1" target="_self" vusion-slot-name-edit="text">
          复制
        </a>
      </div>
      <transition-stub name="fade-fast">
        <div arraw-size="normal" class="root" style="display: none;">
          <div class="arrow" data-popper-arrow></div>
          <div class="body" size="normal">
            已复制
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade-fast">
        <div arraw-size="normal" class="root" style="display: none;">
          <div class="arrow" data-popper-arrow></div>
          <div class="body" size="normal">
            无复制对象
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`u-copy.vue Demo-触发元素 1`] = `
<div>
  <div class="root">
    <div vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        复制
      </a>
    </div>
    <transition-stub name="fade-fast">
      <div arraw-size="normal" class="root" style="display: none;">
        <div class="arrow" data-popper-arrow></div>
        <div class="body" size="normal">
          已复制
        </div>
      </div>
    </transition-stub>
    <transition-stub name="fade-fast">
      <div arraw-size="normal" class="root" style="display: none;">
        <div class="arrow" data-popper-arrow></div>
        <div class="body" size="normal">
          无复制对象
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`u-copy.vue Demo-触发元素 2`] = `
<div>
  <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    复制
  </a>
</div>
`;
